# esp-harness

./: .gitignore  AGENT.md  CHANGELOG.md  README.md  RELEASING.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  question.md
.github/workflows/: sim-diff.yml
boards/esp32_s3_touch_amoled_2_16/: CMakeLists.txt  Kconfig  README.md  esp32_s3_touch_amoled_2_16.c  idf_component.yml
boards/esp32_s3_touch_amoled_2_16/include/bsp/: display.h  esp-bsp.h  esp32_s3_touch_amoled_2_16.h
components/aurora-harness/: CMakeLists.txt  PORTING.md  README.md  RELEASING.md  idf_component.yml
components/aurora-harness/include/harness/: console_protocol.h  screenshot.h
components/aurora-harness/src/: console_protocol.c  default_cmds.c  screenshot.c
components/esp-harness-core/: CMakeLists.txt  PORTING.md  README.md  RELEASING.md  idf_component.yml
components/esp-harness-core/include/harness/: bsp_iface.h  default_cmds.h  progress.h  scene_framework.h  toast.h
components/esp-harness-core/src/: console_protocol.c  default_cmds.c  progress.c  scene_framework.c  screenshot.c  toast.c
docs/: architecture.md  faq.md  getting-started.md  harness-report.html  index.html  lessons-v1.7.md  lessons-v2.5-consumer.md  manifesto.md  troubleshooting.md
docs/brand/: README.md
docs/specs/: 2026-05-24-scaffold-v2-design.md  2026-05-24-scaffold-v2-plan.md
examples/aurora/: AGENT.md  CHANGELOG.md  CMakeLists.txt  KNOWN_ISSUES.md  README.md  partitions.csv  sdkconfig.defaults
examples/aurora/.esp-harness/: baseline.json
examples/aurora/docs/: harness-report.html  scenes-map.md
examples/aurora/main/: CMakeLists.txt  aurora_main.c  idf_component.yml  ui_shell.c  ui_shell.h
examples/aurora/main/harness/: harness_commands.c  harness_commands.h
examples/aurora/main/peripherals/: audio.c  audio.h  ble.c  ble.h  imu.c  imu.h  keys.c  keys.h  pmic.c  pmic.h  sdcard.c  sdcard.h  settings.c  settings.h  system.c  system.h  wifi.c  wifi.h  wifi_creds.c  wifi_creds.h
examples/aurora/main/scenes/: scene_bloom.c  scene_cell.c  scene_echo.c  scene_glow.c  scene_grid.c  scene_halo.c  scene_keys.c  scene_listen.c  scene_notify.c  scene_pulse.c  scene_sniff.c  scene_spectrum.c  scene_spin.c  scene_survey.c  scene_system.c  scene_tilt.c  scene_tone.c  scene_track.c  scene_vault.c  scene_whisper.c  scenes.h
examples/aurora/sim/: CMakeLists.txt  README.md  lv_conf.h  main.c  mock_peripherals.c  mock_peripherals.h  scenes.json
examples/aurora/sim/golden/: README.md
examples/aurora/tests/: conftest.py  test_sim_diff.py
examples/aurora/tools/: aurora_smoke.ps1
examples/hello-minimal/: .gitignore  AGENT.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/hello-minimal/main/: CMakeLists.txt  hello_minimal_main.c
examples/hello-minimal/main/scenes/: scene_hello.c  scenes.h
sim-base/: INTEGRATION.md  README.md  mock_bsp.c  mock_bsp.h
sim-base/include/: esp_err.h  esp_heap_caps.h  esp_log.h  esp_system.h  esp_timer.h
sim-base/include/bsp/: display.h  esp-bsp.h
sim-base/include/freertos/: FreeRTOS.h  semphr.h  task.h
sim-base/tools/: setup.ps1
tools/: release.ps1  smoke.ps1  smoke.sh
tools/esp-harness/: AGENT.md  CHANGELOG.md  README.md  check_manifest.py  install.ps1  pyproject.toml
tools/esp-harness/src/esp_harness/: __init__.py  __main__.py  cli.py  client.py  exit_codes.py  output.py
tools/esp-harness/src/esp_harness/adversarial/: __init__.py  aggregator.py  runner.py
tools/esp-harness/src/esp_harness/adversarial/personas/: __init__.py  falsify.py  verify.py
tools/esp-harness/src/esp_harness/commands/: add.py  adversarial.py  audio.py  backtrace.py  bench.py  build.py  console.py  create.py  cycle.py  doctor.py  flash.py  init.py  list_modules.py  manifest.py  monitor.py  new.py  port.py  remove_mod.py  run.py  screenshot.py  sim.py  tap.py  test.py  verify.py
tools/esp-harness/src/esp_harness/core/: backtrace.py  config.py  console_session.py  idf_runner.py  modules.py  parser.py  patches.py  ports.py  serial_io.py
tools/esp-harness/src/esp_harness/data/: baseline.json
tools/esp-harness/tests/: README.md  conftest.py  test_adversarial.py  test_config.py  test_create.py  test_doctor.py  test_manifest.py  test_modules.py  test_parser.py  test_payload_reader.py  test_persistent_session.py
