[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esp-harness"
version = "1.7.4"
description = "AI-driven dev-loop CLI for ESP-IDF + LVGL projects (build / flash / monitor / sim / manifest)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Caldis" }]
license = { text = "MIT" }
keywords = ["esp32", "esp-idf", "lvgl", "embedded", "ai-loop", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyserial>=3.5",
    "Pillow>=10.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.urls]
Homepage   = "https://github.com/Caldis/esp-harness"
Repository = "https://github.com/Caldis/esp-harness"
Issues     = "https://github.com/Caldis/esp-harness/issues"

[project.scripts]
esp-harness = "esp_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
esp_harness = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
